# PennCloud

T11/: CMakeLists.txt  Makefile  README.md  backend_utils.cc  backend_utils.h  config.txt  config_front.txt  frontend_master.cc  key_value_store_client.cc  key_value_store_client.h  key_value_store_master.cc  key_value_store_server.cc  kvstore.proto  process_request.cc  process_request.h  script.sh  smtpclient.cc  smtpclient.h  smtpserver.cc  user.cc  user.h  user_data.cc  user_data.h  utils.cc  utils.h  webserver.cc  webserver.h
T11/html/: Unauthorized.html  account.html  admin.html  email_form.html  file_upload.html  folder_create.html  login.html  main.html  register.html  rename.html
